--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">{{params['blog_headName']}}</a>
+        <a class="navbar-brand" href="/">{{params['blog_headName']}}</a>
         <button
           class="navbar-toggler"
           type="button"
