--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,10 @@
                 </div>
             </div>
         </header>
+        <div class="fa-3x">
+        
+            <i class="fas fa-spinner fa-pulse"></i>
+        </div>
         <!-- Main Content-->
         <main class="mb-4">
             <div class="container px-4 px-lg-5">
