--- a/templates/crypto_analysis2.html
+++ b/templates/crypto_analysis2.html
@@ -37,7 +37,10 @@
             <h4 style="display: flex;justify-content: center;">THIS WILL TAKE HARDLY 1 MINUTES TO FETCH NEW DATA AFTER REFRESING PAGE </h4>
             <div style="display: flex; justify-content: center;">
                 <a href="/crypto_analysis2"><button  class="btn" style="background-color: goldenrod; color: white; border-radius: 5px;" >REFRESH</button></a>
+                <a href="/graph"><button style="border-radius: 5px; margin-left: 1vw;" type="button" class="btn btn-success">BACK</button>  </a>
+
             </div>
+
            
         </body>
        
