--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,10 +37,13 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600;900&family=Rubik+Moonrocks&family=Send+Flowers&display=swap" rel="stylesheet">
-  </head>
-  <body>
+
+</head>
+  <body style="background-color: silver;">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+
+    
+    <nav class="navbar navbar-expand-lg " id="mainNav">
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="/">{{params['blog_headName']}}</a>
         <button
@@ -61,10 +64,7 @@
               <a class="nav-link px-lg-3 py-3 py-lg-4" href="/"
                 >Home</a
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" href="/about">About</a>
-            </li>
+            
             
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact"
@@ -81,6 +81,11 @@
                 >GRAPH ANALYSIS</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4" href="/notes"
+                >TAKE NOTES</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -88,7 +93,7 @@
 
     {% block body %} {% endblock %}
 
-    <footer class="border-top">
+    <footer class="">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
@@ -129,5 +134,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="{{url_for('static',filename='js/scripts.js')}}"></script>
+    <script src="{{url_for('static',filename='js/price.js')}}"></script>
+    <script src="{{url_for('static',filename='js/notes.js')}}"></script>
+
+
+
+
   </body>
 </html>
