--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,7 +43,7 @@
         <td>{{post.title}}</td>
         <td>{{post.date}}</td>
         <td ><a href="/edit/{{post.sno}}"><button style="border-radius: 10px;" class="btn btn-success">Edit</button></a></td>
-        <td><a href="/delete/{{post.sno}}"></a><button style="border-radius: 10px;" class="btn btn-danger" disabled>Delete</button></td>
+        <td><a href="/delete/{{post.sno}}"></a><button style="border-radius: 10px;" class="btn btn-danger">Delete</button></td>
 
 
       </tr>
