--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -64,10 +64,11 @@
   --bs-body-bg: #fff;
 }
 
+
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+ /* box-sizing: border-box; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -2186,7 +2187,7 @@ progress {
 
 .form-control {
   display: block;
-  width: 100%;
+  width: 90%;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
@@ -10997,7 +10998,7 @@ textarea.form-control-lg {
   }
 }
 body {
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 hr {
@@ -11006,7 +11007,7 @@ hr {
 }
 
 p {
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 p a {
   text-decoration: underline;
@@ -11134,7 +11135,7 @@ header.masthead:before {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #212529;
+  background-color: ;
   opacity: 0.5;
 }
 header.masthead .page-heading,
