--- a/templates/crypto_analysis3.html
+++ b/templates/crypto_analysis3.html
@@ -11,6 +11,7 @@
             </div>
         </div>
     </div>
+    
 </header>
         
 <style>
@@ -30,14 +31,14 @@
         <body style="background-color: lightblue;">
             <p > <h4 style="display: flex; justify-content: center; color: green;">LIST OF COINS </h4> </span> </p>
             <br>
-            <div style="display: flex; justify-content: center;"> <h3 style="padding-left: 1vw;">{{analysis_result}}</h3></div>
+            <div style="display: flex; justify-content: center;"> <h3 style="padding-left: 1vw;">{{result}}</h3></div>
            
             <br>
             <br>
             <h4 style="display: flex;justify-content: center;">THIS WILL TAKE 1 MINUTUE TO FETCH DATA</h4>
             <div style="display: flex; flex-direction: row; justify-content: center;">
-                <div style="margin: 10px">  <a href="/crypto_analysis"> <button> REFRESH <span class="load loading"></span></button></a>
-                <div style="margin: 10px">  <a href="/graph"> <button>BACK<span class="load loading"></span></button></a>
+                <div style="margin: 10px">  <a href="/crypto_analysis"> <button class="btn-14"> REFRESH <span class="load loading"></span></button></a>
+                <div style="margin: 10px">  <a href="/graph"> <button class="btn-6">BACK<span class="load loading"></span></button></a>
 
             </div>
 
